<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/standard_padding"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/keyLabelUserDataFirstName" />
        
        <EditText
            android:id="@+id/editTextUserDataFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keyHintUserDataFirstName"
            android:inputType="textPersonName"
            android:imeOptions="actionNext" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/keyLabelUserDataLastName" />
        
        <EditText
            android:id="@+id/editTextUserDataLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keyHintUserDataLastName"
            android:inputType="textPersonName"
            android:imeOptions="actionNext" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/keyLabelUserDataCountry" />
        
        <EditText
            android:id="@+id/editTextUserDataCountry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keyHintUserDataCountry"
            android:inputType="textPersonName"
            android:imeOptions="actionNext" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/keyLabelUserDataCurrency" />
        
        <EditText
            android:id="@+id/editTextUserDataCurrency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keyHintUserDataCurrency"
            android:inputType="textPersonName"
            android:imeOptions="actionDone" />
        
    </LinearLayout>
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyButtonContinue"
        android:onClick="onContinue" />

</LinearLayout>