<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/standard_padding"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/paymentOption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/paymentOptionCreditCard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/keyTextViewPaymentCreditCard" />

            <RadioButton
                android:id="@+id/paymentOptionDebit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/keyTextViewPaymentDebit" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyLabelRequestMode" />

        <ToggleButton
            android:id="@+id/paymentRequestMode"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:checked="false"
            android:textOff="@string/keyRequestModeTest"
            android:textOn="@string/keyRequestModeLive" />
    </LinearLayout>
	
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyButtonPaymentDetails"
        android:onClick="onPaymentDetails"
         />

</LinearLayout>